--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -1,196 +1,198 @@
-.blog-section{
-    .blog, .space {
-        overflow: hidden;
-        padding: 0rem 0.5rem;
-    
-        .project-list {
-            margin-top: 3rem;   
-        }
-    
-        .preview-title {
-            margin: 0.5rem 0rem;
-            margin-bottom: 0rem;
-    
-            display: flex;
-            align-items: flex-start;
-            gap: 0.5rem;
-            transition: all 0.5s ease;
-    
-            h1 {
-    
-                font-size: 1rem;
-                line-height: 3rem;
-                // font-size: 3.5rem;
-                // line-height: 3.65rem;
-                // font-size: 5rem;
-                // line-height: 4.5rem;
-                font-weight: 90;
-                font-family: Kleukens;
-                // width: max-content;
-                max-width: 35vw;
-                // display:inline-block;
-                vertical-align: top;
-                margin-top: -0.2rem;
-            }
-    
-            h2 {
-                display: inline;
-                text-align: end;
-    
-                vertical-align: top;
-                font-size: 1.5rem;
-                font-family: Kleukens;
-                // margin: 0rem 0.5rem;
-            }
-    
-            .date {
-                grid-column: 1/2;
-            }
-    
-            .type {
-                grid-column: 11/13;
-                text-align: end;
-    
-            }
-    
-            .work-year {
-                display: none;
-            }
-    
-            .cover-image {
-                // width: min-content;
-                // order: 2;
-                transition: all 0.25s ease;
-                margin-bottom: 0.5rem;
-                // width: 100%;
-                margin: 0rem;
-                padding: 0rem;
-    
-                .image-section,
-                .video-section,
-                .gatsby-image-wrapper {
-                    object-fit: contain;
-                    object-position: center center;
-                    width: 100%;
-                    height: 100%;
-    
-                }
-    
-                iframe {
-                    width: 100%;
-                    height: 100%;
-                    border-radius: 5rem;
-                }
-    
-                img,
-                video {
-                    width: auto;
-                    height: 6vh;
-                    object-fit: contain;
-                    object-position: center center;
-                    border-radius: 1rem;
-    
-                }
-            }
-    
-        }
-    
-        .project-preview {
-            width: 100%;
-    
-            // .blogpostcover {
-            //     width: 100%;
-            //     display: flex;
-            //     margin-bottom: 0.5rem;
-            //     // flex-wrap: wrap;
-                
-            //     // .preview-title {
-            //         h1 {
-            //             font-size: 1rem;
-            //             grid-column: span 8;
-            //         }
-                    
-            //         h2{
-            //         font-size: 1.5rem;
-            //     }
-    
-    
-            //     .cover-image {
-            //         // margin: 0rem 1rem;
-            //         // grid-column: span 1;
-            //         // height: 5vh;
-            //         .image-section{
+// .blog-section {
 
-            //             img,
-            //             video {
-            //                 width: min-content;
-            //                 height: 20vh;
-            //                 // border-radius: 1rem;
-            //             }
-    
-            //             iframe {
-            //                 width: 100%;
-            //                 height: 100%;
-            //                 border-radius: 5rem;
-            //             }
-            //         }
-            //     }
-    
-            //     .project-description {
-            //         // max-width: 70vw;
-            //         // max-width: max-content;
-            //         // margin-bottom: 2rem;
-    
-            //         padding: 0rem 0.5rem;
-            //         display: flex;
-            //         flex-direction: column;
-            //         // align-items: space-between;
-            //         // justify-content: space-between;
-                    
-            //         // flex-basis: 100%;
-            //         // white-space: nowrap;
-            //         // flex-shrink: 0;
-            //         transition: all 0.5s ease;
-                    
-            //         font-family: Kleukens;
-            //         font-size: 1.5rem;
-            //         line-height: 1.8rem;
-            //         max-width: 70vw;
-                    
-            //         p{
-            //             margin-top: 1rem;
-            //             max-width: 60vw;
-            //             // display: none;
-                
-            //         }
-                
-            //     }
-    
-            //     .type {
-            //         justify-self: flex-end;
-            //         text-align: end;
-            //         margin-left: auto;
-    
-            //     }
-            // }
-        }
-    
-            // .project-preview:hover {
-    
-        //     .cover-image {
-        //         transform: scale(1.5);
-        //         z-index: 10;
-        //     }
-    
-        //     .project-description {
-        //         flex-basis: 100%;
-        //         // margin-top: 0vh;
-        //         // display: block;
-        //         // width: 100%;
-        //     }
-        // }
-    }
-}
+//     .blog,
+//     .space {
+//         overflow: hidden;
+//         padding: 0rem 0.5rem;
+
+//         .project-list {
+//             margin-top: 3rem;
+//         }
+
+//         // .preview-title {
+//         //     margin: 0.5rem 0rem;
+//         //     margin-bottom: 0rem;
+
+//         //     display: flex;
+//         //     align-items: flex-start;
+//         //     gap: 0.5rem;
+//         //     transition: all 0.5s ease;
+
+//         //     h1 {
+
+//         //         font-size: 1rem;
+//         //         line-height: 3rem;
+//         //         // font-size: 3.5rem;
+//         //         // line-height: 3.65rem;
+//         //         // font-size: 5rem;
+//         //         // line-height: 4.5rem;
+//         //         font-weight: 90;
+//         //         font-family: Kleukens;
+//         //         // width: max-content;
+//         //         max-width: 35vw;
+//         //         // display:inline-block;
+//         //         vertical-align: top;
+//         //         margin-top: -0.2rem;
+//         //     }
+
+//         //     h2 {
+//         //         display: inline;
+//         //         text-align: end;
+
+//         //         vertical-align: top;
+//         //         font-size: 1.5rem;
+//         //         font-family: Kleukens;
+//         //         // margin: 0rem 0.5rem;
+//         //     }
+
+//         //     .date {
+//         //         grid-column: 1/2;
+//         //     }
+
+//         //     .type {
+//         //         grid-column: 11/13;
+//         //         text-align: end;
+
+//         //     }
+
+//         //     .work-year {
+//         //         display: none;
+//         //     }
+
+//         //     .cover-image {
+//         //         // width: min-content;
+//         //         // order: 2;
+//         //         transition: all 0.25s ease;
+//         //         margin-bottom: 0.5rem;
+//         //         // width: 100%;
+//         //         margin: 0rem;
+//         //         padding: 0rem;
+
+//         //         .image-section,
+//         //         .video-section,
+//         //         .gatsby-image-wrapper {
+//         //             object-fit: contain;
+//         //             object-position: center center;
+//         //             width: 100%;
+//         //             height: 100%;
+
+//         //         }
+
+//         //         iframe {
+//         //             width: 100%;
+//         //             height: 100%;
+//         //             border-radius: 5rem;
+//         //         }
+
+//         //         img,
+//         //         video {
+//         //             width: auto;
+//         //             height: 6vh;
+//         //             object-fit: contain;
+//         //             object-position: center center;
+//         //             border-radius: 1rem;
+
+//         //         }
+//         //     }
+
+//         // }
+
+//         .project-preview {
+//             // width: 100%;
+
+//             // .blogpostcover {
+//             //     width: 100%;
+//             //     display: flex;
+//             //     margin-bottom: 0.5rem;
+//             //     // flex-wrap: wrap;
+
+//             //     // .preview-title {
+//             //         h1 {
+//             //             font-size: 1rem;
+//             //             grid-column: span 8;
+//             //         }
+
+//             //         h2{
+//             //         font-size: 1.5rem;
+//             //     }
+
+
+//             //     .cover-image {
+//             //         // margin: 0rem 1rem;
+//             //         // grid-column: span 1;
+//             //         // height: 5vh;
+//             //         .image-section{
+
+//             //             img,
+//             //             video {
+//             //                 width: min-content;
+//             //                 height: 20vh;
+//             //                 // border-radius: 1rem;
+//             //             }
+
+//             //             iframe {
+//             //                 width: 100%;
+//             //                 height: 100%;
+//             //                 border-radius: 5rem;
+//             //             }
+//             //         }
+//             //     }
+
+//             //     .project-description {
+//             //         // max-width: 70vw;
+//             //         // max-width: max-content;
+//             //         // margin-bottom: 2rem;
+
+//             //         padding: 0rem 0.5rem;
+//             //         display: flex;
+//             //         flex-direction: column;
+//             //         // align-items: space-between;
+//             //         // justify-content: space-between;
+
+//             //         // flex-basis: 100%;
+//             //         // white-space: nowrap;
+//             //         // flex-shrink: 0;
+//             //         transition: all 0.5s ease;
+
+//             //         font-family: Kleukens;
+//             //         font-size: 1.5rem;
+//             //         line-height: 1.8rem;
+//             //         max-width: 70vw;
+
+//             //         p{
+//             //             margin-top: 1rem;
+//             //             max-width: 60vw;
+//             //             // display: none;
+
+//             //         }
+
+//             //     }
+
+//             //     .type {
+//             //         justify-self: flex-end;
+//             //         text-align: end;
+//             //         margin-left: auto;
+
+//             //     }
+//             // }
+//         }
+
+//         // .project-preview:hover {
+
+//         //     .cover-image {
+//         //         transform: scale(1.5);
+//         //         z-index: 10;
+//         //     }
+
+//         //     .project-description {
+//         //         flex-basis: 100%;
+//         //         // margin-top: 0vh;
+//         //         // display: block;
+//         //         // width: 100%;
+//         //     }
+//         // }
+//     }
+// }
 
 
 .blogpostcover {
@@ -218,7 +220,7 @@
         display: inline;
 
         vertical-align: top;
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         font-family: Kleukens;
         // margin: 0rem 0.5rem;
         // vertical-align: top;
@@ -234,20 +236,20 @@
 
         }
 
-        .image-section{
+        .image-section {
             // width: 40vw;
             // height: 40vh;
 
             img,
             video {
                 width: min-content;
-                height: 20vh;
+                height: 40vh;
                 // border-radius: 1rem;
             }
 
             iframe {
-                width: 100%;
-                height: 100%;
+                width: 40vw;
+                height: 40vh;
                 border-radius: 15rem;
             }
         }
@@ -258,8 +260,8 @@
         // transform: scale(2);
         // width: 35%;
         height: fit-content;
-        margin-top: 3rem;
-        margin-right: 3rem;
+        margin-top: 1rem;
+        margin-left: -3rem;
         overflow: visible;
 
         img {
@@ -274,63 +276,73 @@
     .type {
         grid-column: 11/13;
         text-align: end;
-
     }
 
-    .fullwidth-image {
-        // grid-column: 3/10;
-
-        overflow: hidden;
-        width: 100vw;
-        height: 80vh;
-
-        div {
-            width: 100%;
-            height: 100%;
-
-            display: flex;
-            align-items: center;
-            overflow: hidden;
-
-            img {
-                object-fit: contain;
-            }
-
+    .project-description{
+        p{
+            font-size: 1.5rem;
         }
     }
+
+    // .fullwidth-image {
+    //     // grid-column: 3/10;
+
+    //     overflow: hidden;
+    //     width: 100vw;
+    //     height: 80vh;
+
+    //     div {
+    //         width: 100%;
+    //         height: 100%;
+
+    //         display: flex;
+    //         align-items: center;
+    //         overflow: hidden;
+
+    //         img {
+    //             object-fit: contain;
+    //         }
+
+    //     }
+    // }
 }
 
 .deep-sea-bots {
     .blogpostcover {
-        height: 40vh;
+        // height: 40vh;
 
         .cover-image {
-    //         // background-color: rgba(255, 255, 255, 0.5);
-    //         // overflow: hidden;
+            //         // background-color: rgba(255, 255, 255, 0.5);
+            //         // overflow: hidden;
 
+            width: 50vw;
+            height: 40vh;
+
+            // border-radius: 20rem;
+            
             .image-section {
-
-                // overflow: visible;
-
-
+                
+                overflow: visible;
+                // overflow: hidden;
+                height: 100%;
+                width: 100%;
+                
                 iframe {
-                    // overflow: visible;
-                    
-                    width: calc(100% * 4.4);
+                    border-radius: 200rem;
+
+                    width: calc(100% * 4);
                     height: calc(100% * 4);
-                    // width: 40vw;
-                    // height: 100%;
-                    zoom: 0.5;
+                    zoom: 0.25;
 
                     -ms-zoom: 0.25;
-                    transform: scale(0.5) translateX(-2%);
+                    transform: scale(0.25) translateX(0%);
 
                     -moz-transform: scale(0.25);
-                    -moz-transform-origin: -2% 0;
+                    -moz-transform-origin: 0% 0;
                     -o-transform: scale(0.25);
-                    -o-transform-origin: -2% 0;
+                    -o-transform-origin: 0% 0;
                     -webkit-transform: scale(0.25);
-                    -webkit-transform-origin: -2% 0;
+                    -webkit-transform-origin: 0% 0;
 
                 }
             }
@@ -339,15 +351,18 @@
 }
 
 
-.space{
-    .project-preview{
-        .blogpostcover{
-            .image-section{
+.space {
+    .project-preview {
+        .blogpostcover {
+            .cover-image {
                 width: 40vw;
                 height: 40vh;
-                iframe {
-                    width: 100%;
-                    height: 100%;
+
+                .image-section {
+                    iframe {
+                        width: 100%;
+                        height: 100%;
+                    }
                 }
             }
         }
