--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -186,10 +186,10 @@ body {
             // padding: 0.6rem;
             // background: rgb(134, 134, 255, 0);
             // background: linear-gradient(rgb(134, 134, 255), rgb(254, 214, 54, 0.6));
-            h1 {
-               font-size: 3rem;
-               line-height: 3rem;
-           }
+         //    h1 {
+         //       font-size: 3rem;
+         //       line-height: 3rem;
+         //   }
          }
       }
    }
