--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -27,6 +27,8 @@
             li {
                 border-radius: 1rem;
                 padding: 0.2rem 0.5rem;
+                height: 5rem;
+
                 // background-color: rgb(255, 255, 255);
 
             }
@@ -45,42 +47,38 @@
 
     .color-modes {
         display: flex;
-        flex-direction: column;
+        // flex-direction: column;
         position: fixed;
         right: 0rem;
         justify-content: center;
+        margin-right: 2rem;
 
         li {
             display: flex;
             justify-content: center;
-            // position: absolute;
-            // right: 0;
-            // transform:translateX(200px);
-            margin: 0rem 0rem;
-            margin-bottom: 2rem;
-            // visibility: hidden;
-            // display: none;
-            // opacity: 0;
+  
+            // gap: 0rem;
+            margin: 0rem -1.5rem;
+            // margin-bottom: 2rem;
             font-size: 2rem;
-            // background-color: rgb(255, 255, 255,0);
-            // background-color: blue;
+
             transition: all ease 0.5s;   
 
-            #star{
-                position: fixed;
-                left: 1rem;
-                bottom: 20vh;
-            }
-            #sun{
-                position: fixed;
-                top: 0.5rem;
-                right: 30vw;
-            }
-            #rainbow{
-                position: fixed;
-                bottom: 1rem;
-                right: 20vw;
-            }
+            // #star{
+            //     position: fixed;
+            //     left: 1rem;
+            //     bottom: 20vh;
+            // }
+            // #sun{
+            //     position: fixed;
+            //     top: 0.5rem;
+            //     right: 30vw;
+            // }
+            // #rainbow{
+            //     position: fixed;
+            //     bottom: 1rem;
+            //     right: 20vw;
+            // }
         }
 
         .active-button{
@@ -96,8 +94,8 @@
 
         button{
             img{
-                max-height: 3.25rem;
-                max-width: 4rem;
+                max-height: 5.25rem;
+                max-width: 6.5rem;
                 transition: all ease 0.5s;   
 
             }
@@ -105,7 +103,7 @@
 
         li:hover{
             img{
-                transform: scale(1.25) rotate(360deg);
+                transform: scale(1.2);
                 // transition: all ease 0.5s;   
 
             }
