--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -1,5 +1,4 @@
 // .blog-section {
-
 //     .blog,
 //     .space {
 //         overflow: hidden;
@@ -9,172 +8,172 @@
 //             margin-top: 3rem;
 //         }
 
-//         // .preview-title {
-//         //     margin: 0.5rem 0rem;
-//         //     margin-bottom: 0rem;
+//         .preview-title {
+//             margin: 0.5rem 0rem;
+//             margin-bottom: 0rem;
 
-//         //     display: flex;
-//         //     align-items: flex-start;
-//         //     gap: 0.5rem;
-//         //     transition: all 0.5s ease;
+//             display: flex;
+//             align-items: flex-start;
+//             gap: 0.5rem;
+//             transition: all 0.5s ease;
 
-//         //     h1 {
+//             h1 {
 
-//         //         font-size: 1rem;
-//         //         line-height: 3rem;
-//         //         // font-size: 3.5rem;
-//         //         // line-height: 3.65rem;
-//         //         // font-size: 5rem;
-//         //         // line-height: 4.5rem;
-//         //         font-weight: 90;
-//         //         font-family: Kleukens;
-//         //         // width: max-content;
-//         //         max-width: 35vw;
-//         //         // display:inline-block;
-//         //         vertical-align: top;
-//         //         margin-top: -0.2rem;
-//         //     }
+//                 font-size: 1rem;
+//                 line-height: 3rem;
+//                 // font-size: 3.5rem;
+//                 // line-height: 3.65rem;
+//                 // font-size: 5rem;
+//                 // line-height: 4.5rem;
+//                 font-weight: 90;
+//                 font-family: Kleukens;
+//                 // width: max-content;
+//                 max-width: 35vw;
+//                 // display:inline-block;
+//                 vertical-align: top;
+//                 margin-top: -0.2rem;
+//             }
 
-//         //     h2 {
-//         //         display: inline;
-//         //         text-align: end;
+//             h2 {
+//                 display: inline;
+//                 text-align: end;
 
-//         //         vertical-align: top;
-//         //         font-size: 1.5rem;
-//         //         font-family: Kleukens;
-//         //         // margin: 0rem 0.5rem;
-//         //     }
+//                 vertical-align: top;
+//                 font-size: 1.5rem;
+//                 font-family: Kleukens;
+//                 // margin: 0rem 0.5rem;
+//             }
 
-//         //     .date {
-//         //         grid-column: 1/2;
-//         //     }
+//             .date {
+//                 grid-column: 1/2;
+//             }
 
-//         //     .type {
-//         //         grid-column: 11/13;
-//         //         text-align: end;
+//             .type {
+//                 grid-column: 11/13;
+//                 text-align: end;
 
-//         //     }
+//             }
 
-//         //     .work-year {
-//         //         display: none;
-//         //     }
+//             .work-year {
+//                 display: none;
+//             }
 
-//         //     .cover-image {
-//         //         // width: min-content;
-//         //         // order: 2;
-//         //         transition: all 0.25s ease;
-//         //         margin-bottom: 0.5rem;
-//         //         // width: 100%;
-//         //         margin: 0rem;
-//         //         padding: 0rem;
+//             .cover-image {
+//                 // width: min-content;
+//                 // order: 2;
+//                 transition: all 0.25s ease;
+//                 margin-bottom: 0.5rem;
+//                 // width: 100%;
+//                 margin: 0rem;
+//                 padding: 0rem;
 
-//         //         .image-section,
-//         //         .video-section,
-//         //         .gatsby-image-wrapper {
-//         //             object-fit: contain;
-//         //             object-position: center center;
-//         //             width: 100%;
-//         //             height: 100%;
+//                 .image-section,
+//                 .video-section,
+//                 .gatsby-image-wrapper {
+//                     object-fit: contain;
+//                     object-position: center center;
+//                     width: 100%;
+//                     height: 100%;
 
-//         //         }
+//                 }
 
-//         //         iframe {
-//         //             width: 100%;
-//         //             height: 100%;
-//         //             border-radius: 5rem;
-//         //         }
+//                 iframe {
+//                     width: 100%;
+//                     height: 100%;
+//                     border-radius: 5rem;
+//                 }
 
-//         //         img,
-//         //         video {
-//         //             width: auto;
-//         //             height: 6vh;
-//         //             object-fit: contain;
-//         //             object-position: center center;
-//         //             border-radius: 1rem;
+//                 img,
+//                 video {
+//                     width: auto;
+//                     height: 6vh;
+//                     object-fit: contain;
+//                     object-position: center center;
+//                     border-radius: 1rem;
 
-//         //         }
-//         //     }
+//                 }
+//             }
 
-//         // }
+//         }
 
 //         .project-preview {
-//             // width: 100%;
+//             width: 100%;
 
-//             // .blogpostcover {
-//             //     width: 100%;
-//             //     display: flex;
-//             //     margin-bottom: 0.5rem;
-//             //     // flex-wrap: wrap;
+//             .blogpostcover {
+//                 width: 100%;
+//                 display: flex;
+//                 margin-bottom: 0.5rem;
+//                 // flex-wrap: wrap;
 
-//             //     // .preview-title {
-//             //         h1 {
-//             //             font-size: 1rem;
-//             //             grid-column: span 8;
-//             //         }
+//                 // .preview-title {
+//                     h1 {
+//                         font-size: 1rem;
+//                         grid-column: span 8;
+//                     }
 
-//             //         h2{
-//             //         font-size: 1.5rem;
-//             //     }
+//                     h2{
+//                     font-size: 1.5rem;
+//                 }
 
 
-//             //     .cover-image {
-//             //         // margin: 0rem 1rem;
-//             //         // grid-column: span 1;
-//             //         // height: 5vh;
-//             //         .image-section{
+//                 .cover-image {
+//                     // margin: 0rem 1rem;
+//                     // grid-column: span 1;
+//                     // height: 5vh;
+//                     .image-section{
 
-//             //             img,
-//             //             video {
-//             //                 width: min-content;
-//             //                 height: 20vh;
-//             //                 // border-radius: 1rem;
-//             //             }
+//                         img,
+//                         video {
+//                             width: min-content;
+//                             height: 20vh;
+//                             // border-radius: 1rem;
+//                         }
 
-//             //             iframe {
-//             //                 width: 100%;
-//             //                 height: 100%;
-//             //                 border-radius: 5rem;
-//             //             }
-//             //         }
-//             //     }
+//                         iframe {
+//                             width: 100%;
+//                             height: 100%;
+//                             border-radius: 5rem;
+//                         }
+//                     }
+//                 }
 
-//             //     .project-description {
-//             //         // max-width: 70vw;
-//             //         // max-width: max-content;
-//             //         // margin-bottom: 2rem;
+//                 .project-description {
+//                     // max-width: 70vw;
+//                     // max-width: max-content;
+//                     // margin-bottom: 2rem;
 
-//             //         padding: 0rem 0.5rem;
-//             //         display: flex;
-//             //         flex-direction: column;
-//             //         // align-items: space-between;
-//             //         // justify-content: space-between;
+//                     padding: 0rem 0.5rem;
+//                     display: flex;
+//                     flex-direction: column;
+//                     // align-items: space-between;
+//                     // justify-content: space-between;
 
-//             //         // flex-basis: 100%;
-//             //         // white-space: nowrap;
-//             //         // flex-shrink: 0;
-//             //         transition: all 0.5s ease;
+//                     // flex-basis: 100%;
+//                     // white-space: nowrap;
+//                     // flex-shrink: 0;
+//                     transition: all 0.5s ease;
 
-//             //         font-family: Kleukens;
-//             //         font-size: 1.5rem;
-//             //         line-height: 1.8rem;
-//             //         max-width: 70vw;
+//                     font-family: Kleukens;
+//                     font-size: 1.5rem;
+//                     line-height: 1.8rem;
+//                     max-width: 70vw;
 
-//             //         p{
-//             //             margin-top: 1rem;
-//             //             max-width: 60vw;
-//             //             // display: none;
+//                     p{
+//                         margin-top: 1rem;
+//                         max-width: 60vw;
+//                         // display: none;
 
-//             //         }
+//                     }
 
-//             //     }
+//                 }
 
-//             //     .type {
-//             //         justify-self: flex-end;
-//             //         text-align: end;
-//             //         margin-left: auto;
+//                 .type {
+//                     justify-self: flex-end;
+//                     text-align: end;
+//                     margin-left: auto;
 
-//             //     }
-//             // }
+//                 }
+//             }
 //         }
 
 //         // .project-preview:hover {
@@ -194,10 +193,182 @@
 //     }
 // }
 
+.blog-page,
+.blog-section {
+    overflow: hidden;
+    padding: 0rem 0.5rem;
+
+    .project-list {
+        margin-top: 3rem;
+
+    }
+
+    .project-preview {
+        width: 100%;
+    }
+
+
+    // .project-preview:hover {
+
+    //     .cover-image {
+    //         transform: scale(1.5);
+    //         z-index: 10;
+    //     }
+
+    //     .project-description {
+    //         flex-basis: 100%;
+    //         // margin-top: 0vh;
+    //         // display: block;
+    //         // width: 100%;
+    //     }
+    // }
+}
+
+.blog-section {
+    .project-preview {
+        .blogpostcover {
+            width: 100%;
+            display: flex;
+
+            border-top: 1px;
+            border-color: aliceblue;
+            // border-style: solid;
+
+            // grid-template-columns: repeat(12, 1fr);
+            padding-top: 0.5rem;
+            margin-bottom: 1rem;
+
+            gap: 1rem;
+
+            // .preview-title {
+            h1 {
+                font-size: 5rem;
+                grid-column: span 8;
+            }
+
+            h2 {
+                font-size: 1.5rem;
+            }
+
+
+            .cover-image {
+
+                // margin: 0rem 1rem;
+                // grid-column: span 1;
+                // height: 5vh;
+                img,
+                video {
+                    width: min-content;
+                    height: 20vh;
+                    border-radius: 1rem;
+
+                }
+            }
+
+            .project-description {
+                // max-width: 70vw;
+                // max-width: max-content;
+                // margin-bottom: 2rem;
+                padding: 0rem 0.5rem;
+                display: flex;
+                flex-direction: column;
+                // align-items: space-between;
+                // justify-content: space-between;
+
+                // flex-basis: 100%;
+                // white-space: nowrap;
+                // flex-shrink: 0;
+                transition: all 0.5s ease;
+
+                font-family: Kleukens;
+                font-size: 1.5rem;
+                line-height: 1.8rem;
+                max-width: 70vw;
+
+                h1{
+                    margin-bottom: 1rem;
+                }
+
+                p {
+                    max-width: 60vw;
+                    // display: none;
+
+                }
+
+            }
+
+            .type {
+                justify-self: flex-end;
+                text-align: end;
+                margin-left: auto;
+
+            }
+        }
+    }
+}
+
+
+// .blog-page {
+//     min-height: 100vh;
+//     // width: 100vw;
+// }
+
+// .blog-post {
+//     padding: 1rem;
+//     padding-top: 4vh;
+
+// }
+
+
+// .blog-post-content {
+//     display: grid;
+//     grid-template-columns: repeat(12, 1fr);
+//     gap: 1rem;
+
+//     .description {
+//         grid-column: 4/12;
+//         margin-bottom: 3.5rem;
+
+//     }
+
+//     .image-section {
+//         width: 100%;
+//         display: flex;
+//         flex: 1 1 0;
+
+//         gap: 1rem;
+
+//         div {
+//             flex-basis: 100%;
+//         }
+
+//         .iFrame {
+
+//             iframe {
+//                 width: 100%;
+//                 height: 80vh;
+//                 border-radius: 2rem;
+//                 // zoom: 1.25;
+//             }
+
+//             p.caption {
+//                 text-align: center;
+//             }
+//         }
+//     }
+
+//     .text-section {
+//         max-width: 100%;
+//         display: flex;
+//         gap: 1rem;
+//     }
+// }
+
+
 
 .blogpostcover {
-    grid-template-columns: repeat(12, 1fr);
-    gap: 1rem;
+    // border-top: 1px;
+
 
     h1 {
         grid-column: 4/11;
@@ -220,6 +391,15 @@
         font-family: Kleukens;
         // margin: 0rem 0.5rem;
         // vertical-align: top;
+
+    }
+
+
+    .project-description{
+      
+        p{
+            font-size: 1.5rem;
+        }
     }
 
     .cover-image {
@@ -272,12 +452,6 @@
     .type {
         grid-column: 11/13;
         text-align: end;
-    }
-
-    .project-description{
-        p{
-            font-size: 1.5rem;
-        }
     }
 
     // .fullwidth-image {
@@ -368,9 +542,11 @@
 .blog-post {
     padding: 1rem;
     padding-top: 4vh;
-
+    background-color: green;
 }
-
+.space-post{
+    background-color: blue;
+}
 
 .blog-post-content {
     display: grid;
