--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 .index-page {
     width: 100vw;
-    padding-top: 2rem;
+    padding-top: 6rem;
 
     .section-list {
         // padding: 2rem 0rem;
@@ -17,7 +17,7 @@
         padding: 0rem 0.5rem;
         // margin: 0.5rem;
         // border-radius: 2rem;
-        margin-bottom: 0vh;
+        // margin-bottom: 0vh;
         // margin-top: 2rem;
 
         a {
