--- a/src/styles/typo.scss
+++ b/src/styles/typo.scss
@@ -34,14 +34,14 @@ html {
    font-size: clamp(10px, 1vw, 16px);
 }
 
-// .prom-text {
-//    p {
-//        font-size: 2rem;
-//        line-height: 2.5rem;
-//        margin-bottom: 1rem;
-//        font-family: Kleukens;
-//    }
-// }
+.prom-text {
+   p {
+       font-size: 2rem;
+       line-height: 2.5rem;
+       margin-bottom: 1rem;
+       font-family: Kleukens;
+   }
+}
 
 
 // p.caption {
