--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -307,65 +307,6 @@
     }
 }
 
-
-// .blog-page {
-//     min-height: 100vh;
-//     // width: 100vw;
-// }
-
-// .blog-post {
-//     padding: 1rem;
-//     padding-top: 4vh;
-
-// }
-
-
-// .blog-post-content {
-//     display: grid;
-//     grid-template-columns: repeat(12, 1fr);
-//     gap: 1rem;
-
-//     .description {
-//         grid-column: 4/12;
-//         margin-bottom: 3.5rem;
-
-//     }
-
-//     .image-section {
-//         width: 100%;
-//         display: flex;
-//         flex: 1 1 0;
-
-//         gap: 1rem;
-
-//         div {
-//             flex-basis: 100%;
-//         }
-
-//         .iFrame {
-
-//             iframe {
-//                 width: 100%;
-//                 height: 80vh;
-//                 border-radius: 2rem;
-//                 // zoom: 1.25;
-//             }
-
-//             p.caption {
-//                 text-align: center;
-//             }
-//         }
-//     }
-
-//     .text-section {
-//         max-width: 100%;
-//         display: flex;
-//         gap: 1rem;
-//     }
-// }
-
-
-
 .blogpostcover {
     // border-top: 1px;
 
@@ -521,73 +462,150 @@
 }
 
 
-.space {
-    .project-preview {
-        .blogpostcover {
-            .cover-image {
-                width: 40vw;
-                height: 40vh;
+// .space {
+//     .project-preview {
+//         .blogpostcover {
+//             .cover-image {
+//                 width: 40vw;
+//                 height: 40vh;
 
-                .image-section {
-                    iframe {
-                        width: 100%;
-                        height: 100%;
-                    }
-                }
-            }
-        }
-    }
-}
+//                 .image-section {
+//                     iframe {
+//                         width: 100%;
+//                         height: 100%;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
 
 .blog-post {
     padding: 1rem;
-    padding-top: 4vh;
-    background-color: green;
-}
-.space-post{
-    background-color: blue;
-}
+    padding-top: 6vh;
 
-.blog-post-content {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    gap: 1rem;
-
-    .description {
-        grid-column: 4/12;
-        margin-bottom: 3.5rem;
-
-    }
-
-    .image-section {
+    .blogpostcover {
         width: 100%;
         display: flex;
-        flex: 1 1 0;
+
+        border-top: 1px;
+        border-color: aliceblue;
+        // border-style: solid;
+
+        // grid-template-columns: repeat(12, 1fr);
+        padding-top: 0.5rem;
+        margin-bottom: 1rem;
 
         gap: 1rem;
 
-        div {
-            flex-basis: 100%;
+        // .preview-title {
+        h1 {
+            font-size: 5rem;
+            grid-column: span 8;
         }
 
-        .iFrame {
+        h2 {
+            font-size: 1.5rem;
+        }
 
-            iframe {
-                width: 100%;
-                height: 80vh;
-                border-radius: 2rem;
-                // zoom: 1.25;
+
+        .cover-image {
+
+            // margin: 0rem 1rem;
+            // grid-column: span 1;
+            // height: 5vh;
+            img,
+            video {
+                width: min-content;
+                height: 20vh;
+                border-radius: 1rem;
+
+            }
+        }
+
+        .project-description {
+            // max-width: 70vw;
+            // max-width: max-content;
+            // margin-bottom: 2rem;
+            padding: 0rem 0.5rem;
+            display: flex;
+            flex-direction: column;
+            // align-items: space-between;
+            // justify-content: space-between;
+
+            // flex-basis: 100%;
+            // white-space: nowrap;
+            // flex-shrink: 0;
+            transition: all 0.5s ease;
+
+            font-family: Kleukens;
+            font-size: 1.5rem;
+            line-height: 1.8rem;
+            max-width: 70vw;
+
+            h1{
+                margin-bottom: 1rem;
             }
 
-            p.caption {
-                text-align: center;
+            p {
+                max-width: 60vw;
+                // display: none;
+
             }
+
+        }
+
+        .type {
+            justify-self: flex-end;
+            text-align: end;
+            margin-left: auto;
+
         }
     }
 
-    .text-section {
-        max-width: 100%;
-        display: flex;
-        gap: 1rem;
+    .blog-post-content {
+        // width:100vw;
+        display: grid;
+        grid-template-columns: repeat(12, minmax(0, auto));
+        // gap: 1rem;
+    
+        .description {
+            grid-column: 4/12;
+            margin-bottom: 3.5rem;
+            // width: 100%;
+    
+        }
+    
+        .image-section {
+            width: 100%;
+            display: flex;
+            flex: 1 1 0;
+    
+            gap: 1rem;
+    
+            div {
+                flex-basis: 100%;
+            }
+    
+            .iFrame {
+    
+                iframe {
+                    width: 100%;
+                    height: 80vh;
+                    border-radius: 2rem;
+                    // zoom: 1.25;
+                }
+    
+                p.caption {
+                    text-align: center;
+                }
+            }
+        }
+    
+        .text-section {
+            max-width: 100%;
+            display: flex;
+            gap: 1rem;
+        }
     }
 }
