--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -25,6 +25,13 @@
         margin-bottom: 1rem;
      }
 
+    //  p {
+    //     font-size: 2rem;
+    //     line-height: 2.5rem;
+    //     margin-bottom: 1rem;
+    //     font-family: Kleukens;
+    // }
+
     a {
         color: grey;
     }
