--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -124,7 +124,10 @@
             font-stretch: 175%;
             text-align: center;
             transition: all 0.5s ease;
-
+            margin: 0px -1px;
+            border-style: solid;
+            border-width: 1px;
+            border-color: black;
         }
 
         li:hover {
