--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -1,207 +1,9 @@
-// .blog-section {
-//     .blog,
-//     .space {
-//         overflow: hidden;
-//         padding: 0rem 0.5rem;
 
-//         .project-list {
-//             margin-top: 3rem;
-//         }
-
-//         .preview-title {
-//             margin: 0.5rem 0rem;
-//             margin-bottom: 0rem;
-
-//             display: flex;
-//             align-items: flex-start;
-//             gap: 0.5rem;
-//             transition: all 0.5s ease;
-
-//             h1 {
-
-//                 font-size: 1rem;
-//                 line-height: 3rem;
-//                 // font-size: 3.5rem;
-//                 // line-height: 3.65rem;
-//                 // font-size: 5rem;
-//                 // line-height: 4.5rem;
-//                 font-weight: 90;
-//                 font-family: Kleukens;
-//                 // width: max-content;
-//                 max-width: 35vw;
-//                 // display:inline-block;
-//                 vertical-align: top;
-//                 margin-top: -0.2rem;
-//             }
-
-//             h2 {
-//                 display: inline;
-//                 text-align: end;
-
-//                 vertical-align: top;
-//                 font-size: 1.5rem;
-//                 font-family: Kleukens;
-//                 // margin: 0rem 0.5rem;
-//             }
-
-//             .date {
-//                 grid-column: 1/2;
-//             }
-
-//             .type {
-//                 grid-column: 11/13;
-//                 text-align: end;
-
-//             }
-
-//             .work-year {
-//                 display: none;
-//             }
-
-//             .cover-image {
-//                 // width: min-content;
-//                 // order: 2;
-//                 transition: all 0.25s ease;
-//                 margin-bottom: 0.5rem;
-//                 // width: 100%;
-//                 margin: 0rem;
-//                 padding: 0rem;
-
-//                 .image-section,
-//                 .video-section,
-//                 .gatsby-image-wrapper {
-//                     object-fit: contain;
-//                     object-position: center center;
-//                     width: 100%;
-//                     height: 100%;
-
-//                 }
-
-//                 iframe {
-//                     width: 100%;
-//                     height: 100%;
-//                     border-radius: 5rem;
-//                 }
-
-//                 img,
-//                 video {
-//                     width: auto;
-//                     height: 6vh;
-//                     object-fit: contain;
-//                     object-position: center center;
-//                     border-radius: 1rem;
-
-//                 }
-//             }
-
-//         }
-
-//         .project-preview {
-//             width: 100%;
-
-//             .blogpostcover {
-//                 width: 100%;
-//                 display: flex;
-//                 margin-bottom: 0.5rem;
-//                 // flex-wrap: wrap;
-
-//                 // .preview-title {
-//                     h1 {
-//                         font-size: 1rem;
-//                         grid-column: span 8;
-//                     }
-
-//                     h2{
-//                     font-size: 1.5rem;
-//                 }
-
-
-//                 .cover-image {
-//                     // margin: 0rem 1rem;
-//                     // grid-column: span 1;
-//                     // height: 5vh;
-//                     .image-section{
-
-//                         img,
-//                         video {
-//                             width: min-content;
-//                             height: 20vh;
-//                             // border-radius: 1rem;
-//                         }
-
-//                         iframe {
-//                             width: 100%;
-//                             height: 100%;
-//                             border-radius: 5rem;
-//                         }
-//                     }
-//                 }
-
-//                 .project-description {
-//                     // max-width: 70vw;
-//                     // max-width: max-content;
-//                     // margin-bottom: 2rem;
-
-//                     padding: 0rem 0.5rem;
-//                     display: flex;
-//                     flex-direction: column;
-//                     // align-items: space-between;
-//                     // justify-content: space-between;
-
-//                     // flex-basis: 100%;
-//                     // white-space: nowrap;
-//                     // flex-shrink: 0;
-//                     transition: all 0.5s ease;
-
-//                     font-family: Kleukens;
-//                     font-size: 1.5rem;
-//                     line-height: 1.8rem;
-//                     max-width: 70vw;
-
-//                     p{
-//                         margin-top: 1rem;
-//                         max-width: 60vw;
-//                         // display: none;
-
-//                     }
-
-//                 }
-
-//                 .type {
-//                     justify-self: flex-end;
-//                     text-align: end;
-//                     margin-left: auto;
-
-//                 }
-//             }
-//         }
-
-//         // .project-preview:hover {
-
-//         //     .cover-image {
-//         //         transform: scale(1.5);
-//         //         z-index: 10;
-//         //     }
-
-//         //     .project-description {
-//         //         flex-basis: 100%;
-//         //         // margin-top: 0vh;
-//         //         // display: block;
-//         //         // width: 100%;
-//         //     }
-//         // }
-//     }
-// }
-
-.blog-page,
-.blog-section {
+.blog-page, .section-list{
     overflow: hidden;
     padding: 0rem 0.5rem;
 
-    .project-list {
-        margin-top: 3rem;
 
-    }
 
     .project-preview {
         width: 100%;
@@ -224,198 +26,124 @@
     // }
 }
 
-.blog-section {
-    .project-preview {
-        .blogpostcover {
-            width: 100%;
-            display: flex;
 
-            border-top: 1px;
-            border-color: aliceblue;
-            // border-style: solid;
-
-            // grid-template-columns: repeat(12, 1fr);
-            padding-top: 0.5rem;
-            margin-bottom: 1rem;
-
-            gap: 1rem;
-
-            // .preview-title {
-            h1 {
-                font-size: 5rem;
-                grid-column: span 8;
-            }
-
-            h2 {
-                font-size: 1.5rem;
-            }
+// .blogpostcover {
+//     // border-top: 1px;
 
 
-            .cover-image {
+//     h1 {
+//         grid-column: 4/11;
 
-                // margin: 0rem 1rem;
-                // grid-column: span 1;
-                // height: 5vh;
-                img,
-                video {
-                    width: min-content;
-                    height: 20vh;
-                    border-radius: 1rem;
+//         font-size: 5rem;
+//         font-weight: 90;
+//         line-height: 4.5rem;
+//         font-family: Kleukens;
+//         // width: max-content;
+//         // max-width: 70vw;
+//         // display:inline-block;
+//         vertical-align: top;
+//     }
 
-                }
-            }
+//     h2 {
+//         display: inline;
 
-            .project-description {
-                // max-width: 70vw;
-                // max-width: max-content;
-                // margin-bottom: 2rem;
-                padding: 0rem 0.5rem;
-                display: flex;
-                flex-direction: column;
-                // align-items: space-between;
-                // justify-content: space-between;
+//         vertical-align: top;
+//         font-size: 1.5rem;
+//         font-family: Kleukens;
+//         // margin: 0rem 0.5rem;
+//         // vertical-align: top;
 
-                // flex-basis: 100%;
-                // white-space: nowrap;
-                // flex-shrink: 0;
-                transition: all 0.5s ease;
-
-                font-family: Kleukens;
-                font-size: 1.5rem;
-                line-height: 1.8rem;
-                max-width: 70vw;
-
-                h1{
-                    margin-bottom: 1rem;
-                }
-
-                p {
-                    max-width: 60vw;
-                    // display: none;
-
-                }
-
-            }
-
-            .type {
-                justify-self: flex-end;
-                text-align: end;
-                margin-left: auto;
-
-            }
-        }
-    }
-}
-
-.blogpostcover {
-    // border-top: 1px;
+//     }
 
 
-    h1 {
-        grid-column: 4/11;
-
-        font-size: 5rem;
-        font-weight: 90;
-        line-height: 4.5rem;
-        font-family: Kleukens;
-        // width: max-content;
-        // max-width: 70vw;
-        // display:inline-block;
-        vertical-align: top;
-    }
-
-    h2 {
-        display: inline;
-
-        vertical-align: top;
-        font-size: 1.5rem;
-        font-family: Kleukens;
-        // margin: 0rem 0.5rem;
-        // vertical-align: top;
-
-    }
-
-
-    .project-description{
+//     .project-description{
       
-        p{
-            font-size: 1.5rem;
-        }
+//         p{
+//             font-size: 1.5rem;
+//         }
+//     }
+
+//     .cover-image {
+//         // margin: 0rem 1rem;
+//         grid-column: 2/4;
+
+//         // max-width: 20vw;
+//         video {
+//             width: 100%;
+
+//         }
+
+//         .image-section {
+//             // width: 40vw;
+//             // height: 40vh;
+
+//             img,
+//             video {
+//                 width: min-content;
+//                 height: 40vh;
+//                 // border-radius: 1rem;
+//             }
+
+//             iframe {
+//                 width: 40vw;
+//                 height: 40vh;
+//                 border-radius: 15rem;
+//             }
+//         }
+
+//     }
+
+//     .title-img {
+//         // transform: scale(2);
+//         // width: 35%;
+//         height: fit-content;
+//         margin-top: 1rem;
+//         margin-left: -3rem;
+//         overflow: visible;
+
+//         img {
+//             object-fit: contain;
+//         }
+//     }
+
+//     .date {
+//         grid-column: 1/2;
+//     }
+
+//     .type {
+//         grid-column: 11/13;
+//         text-align: end;
+//     }
+
+//     // .fullwidth-image {
+//     //     // grid-column: 3/10;
+
+//     //     overflow: hidden;
+//     //     width: 100vw;
+//     //     height: 80vh;
+
+//     //     div {
+//     //         width: 100%;
+//     //         height: 100%;
+
+//     //         display: flex;
+//     //         align-items: center;
+//     //         overflow: hidden;
+
+//     //         img {
+//     //             object-fit: contain;
+//     //         }
+
+//     //     }
+//     // }
+// }
+
+.blog {
+    grid-column: span 2;
+    
+    h2 {
+        background-color: rgb(68, 180, 68);
     }
-
-    .cover-image {
-        // margin: 0rem 1rem;
-        grid-column: 2/4;
-
-        // max-width: 20vw;
-        video {
-            width: 100%;
-
-        }
-
-        .image-section {
-            // width: 40vw;
-            // height: 40vh;
-
-            img,
-            video {
-                width: min-content;
-                height: 40vh;
-                // border-radius: 1rem;
-            }
-
-            iframe {
-                width: 40vw;
-                height: 40vh;
-                border-radius: 15rem;
-            }
-        }
-
-    }
-
-    .title-img {
-        // transform: scale(2);
-        // width: 35%;
-        height: fit-content;
-        margin-top: 1rem;
-        margin-left: -3rem;
-        overflow: visible;
-
-        img {
-            object-fit: contain;
-        }
-    }
-
-    .date {
-        grid-column: 1/2;
-    }
-
-    .type {
-        grid-column: 11/13;
-        text-align: end;
-    }
-
-    // .fullwidth-image {
-    //     // grid-column: 3/10;
-
-    //     overflow: hidden;
-    //     width: 100vw;
-    //     height: 80vh;
-
-    //     div {
-    //         width: 100%;
-    //         height: 100%;
-
-    //         display: flex;
-    //         align-items: center;
-    //         overflow: hidden;
-
-    //         img {
-    //             object-fit: contain;
-    //         }
-
-    //     }
-    // }
 }
 
 .deep-sea-bots {
@@ -482,11 +210,13 @@
 
 .blog-post {
     padding: 1rem;
-    padding-top: 6vh;
+    padding-top: 5rem;
 
     .blogpostcover {
         width: 100%;
-        display: flex;
+        // display: flex;
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
 
         border-top: 1px;
         border-color: aliceblue;
@@ -510,32 +240,25 @@
 
 
         .cover-image {
-
-            // margin: 0rem 1rem;
-            // grid-column: span 1;
-            // height: 5vh;
             img,
             video {
                 width: min-content;
                 height: 20vh;
                 border-radius: 1rem;
+            }
 
+            p.caption{
+                margin: 0.5rem;
+                line-height: 1.2rem;
+                font-weight: 300;
             }
         }
 
         .project-description {
-            // max-width: 70vw;
-            // max-width: max-content;
-            // margin-bottom: 2rem;
             padding: 0rem 0.5rem;
             display: flex;
             flex-direction: column;
-            // align-items: space-between;
-            // justify-content: space-between;
 
-            // flex-basis: 100%;
-            // white-space: nowrap;
-            // flex-shrink: 0;
             transition: all 0.5s ease;
 
             font-family: Kleukens;
@@ -549,16 +272,15 @@
 
             p {
                 max-width: 60vw;
-                // display: none;
-
             }
 
         }
 
         .type {
-            justify-self: flex-end;
-            text-align: end;
-            margin-left: auto;
+            // justify-self: flex-end;
+            // text-align: end;
+            // margin-left: auto;
+            grid-column: span 1;
 
         }
     }
@@ -566,7 +288,7 @@
     .blog-post-content {
         // width:100vw;
         display: grid;
-        grid-template-columns: repeat(12, minmax(0, auto));
+        grid-template-columns: repeat(12, 1fr);
         // gap: 1rem;
     
         .description {
