--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,41 +1,162 @@
 .index-page {
-    width: 100vw;
+    // width: 100vw;
     padding-top: 6rem;
 
     .section-list {
         // padding: 2rem 0rem;
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         gap: 0.5rem;
-    }
 
-    .work-section,
-    .blog-section,
-    .space-section {
-        grid-column: span 2;
-        // width: 50vw;
-        padding: 0rem 0.5rem;
-        // margin: 0.5rem;
-        // border-radius: 2rem;
-        // margin-bottom: 0vh;
-        // margin-top: 2rem;
-
-        a {
-            // color: #000000;
-            transition: all 1s ease;
-   
-         }
-    }
-
-    .hero{
-        grid-column: span 4;
+        .post-link {
+            // grid-column: span 1;
+        }
     }
     
-    .space{
-        .project-preview {
-            background-color: blue;
+
+    // .space {
+    //     .project-preview {
+    //         .postcover {
+    //             h2 {
+    //                 background-color: rgb(134, 134, 255);
+    //             }
+
+    //             .cover-image {
+    //                 // width: 100vw;
+    //                 border-radius: 25vw;
+
+    //                 iframe {
+    //                     // border-radius: 24vw;
+    //                     // width: 50vw;
+    //                     // height: 100%;
+    //                     width: min-content;
+    //                     height: 20vh;
+    //                     border-radius: 24rem;
+    //                 }
+    //             }
+
+    //             .title-img {
+    //                 // transform: scale(1.3);
+    //                 width: 35%;
+    //                 height: fit-content;
+    //                 margin-top: 3rem;
+    //                 overflow: visible;
+
+    //                 img {
+    //                     object-fit: contain;
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
+
+
+
+
+    .hero {
+        grid-column: span 4;
+    }
+
+}
+
+
+.postcover {
+    grid-column: span 2;
+
+    width: auto;
+    display: flex;
+    
+    transition: all 0.3s ease;
+
+    &:hover{
+        // border-left: 1px solid black;
+        padding-left: 1rem;
+
+    }
+
+    gap: 1rem;
+    margin-bottom: 1rem;
+
+    h1 {
+        font-size: 5rem;
+        line-height: 4.5rem;
+        margin-bottom: 1rem;
+        // margin-top: 0px;
+
+    }
+
+    h2 {
+        font-size: 1.5rem;
+        font-family: Kleukens;
+        height: fit-content;
+        border-radius: 5rem;
+        text-align: left;
         
+        padding: 0.2rem 0.5rem;
+        border-style: solid;
+        border-width: 1px;
+        border-color: black;
+    }
+
+    .cover-image {
+        
+        img,
+        video {
+            width: min-content;
+            height: 20vh;
+            border-radius: 1rem;
+        }
+
+        iframe{
+            height: 100%;
+            width: 100%;
         }
 
     }
+
+    .title-img {
+        // transform: scale(0.5);
+        height: fit-content;
+        // margin-top: 3rem;
+        overflow: visible;
+        
+        img {
+            // height: 20vh;
+            object-fit: contain;
+        }
+    }
+
+    .project-description {
+        // padding: 0rem 0.5rem;
+        // display: flex;
+        // flex-direction: column;
+
+        transition: all 0.5s ease;
+
+        font-family: Kleukens;
+        max-width: 70vw;
+
+        // h1{
+        //     margin-bottom: 1rem;
+        // }
+
+        p {
+            max-width: 50vw;
+            font-size: 1.25rem;
+            line-height: 1.5rem;
+            opacity: 0.9;
+            // display: none;
+
+        }
+
+    }
+
+    .type {
+        justify-self: flex-end;
+        text-align:center;
+        margin-left: auto;
+
+    }
 }
+
+
