--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -1,3 +1,96 @@
+.work {
+    // width: 50%;
+    grid-column: span 1;
+    // height: 50vh;
+    // width: 50vw;
+
+    .postcover {
+        // display: flex;
+        // justify-content: space-between;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+
+        width: 100%;
+        height: 50vh;
+        width: 50vw;
+    }
+
+    h2 {
+        background-color: rgb(254, 214, 54);
+        // position: absolute;
+        margin: 0.2rem;
+        z-index: 1;
+        display: inline;
+        width:fit-content;
+
+    }
+
+
+    .cover-image {
+        height: 50vh;
+        width: 50vw;
+        // z-index: 0;
+
+
+        // height: 100%;
+        // width: 100%;
+        border-radius: 1rem;
+        overflow: hidden;
+        position: absolute;
+
+        img,
+        video {
+            height: 100%;
+            width: 100%;
+            // border-radius: 1rem;
+        }
+
+    }
+
+    .project-description {
+        z-index: 2;
+        display: flex;
+        justify-content: center;
+        height: fit-content;
+
+        h1 {
+            // left: 12.5%;
+            width:fit-content;
+
+            font-size: 3rem;
+            font-size: 1.5rem;
+            line-height: 2.15rem;
+
+            margin-top: 0.25rem;
+            margin-left: -1rem;
+
+            border-radius: 5rem;
+            text-align: center;
+            // line-height: 4.5rem;
+
+            padding: 0rem 0.5rem;
+            border-style: solid;
+            border-width: 1px;
+            border-color: black;
+            background-color: rgb(254, 214, 54);
+
+        }
+
+        p {
+            display: none;
+        }
+    }
+
+    .type {
+        // position: relative;
+        margin-left: 0rem;
+        max-width: 10rem;
+        // left: 25%;
+        // text-align: end;
+    }
+}
+
+
 // .work-page,
 // .work-section {
 //     overflow: hidden;
@@ -65,19 +158,19 @@
 //                 // align-items: end;
 //                 // height: max-content;
 
-                
+
 //                 .preview-title {
 //                     // opacity: 0;
 //                     // transform: scale(1);
 //                     transition: all 0.5s ease;
 //                     height: fit-content;
-                    
+
 //                     // box-sizing: border-box;
 //                     // position: absolute;
 //                     // z-index: 10;
 //                     // max-width: 30vw;
 //                     // margin-bottom: 2rem;
-                    
+
 //                     // justify-content: space-between;
 //                     display: flex;
 //                     gap: 0.5rem;
@@ -93,7 +186,7 @@
 //                         // width: 100%;
 //                         margin: 0rem;
 //                         padding: 0rem;
-    
+
 //                         .image-section,
 //                         .video-section,
 //                         .gatsby-image-wrapper {
@@ -101,9 +194,9 @@
 //                             object-position: center center;
 //                             width: 100%;
 //                             height: 100%;
-                            
+
 //                         }
-                        
+
 //                         img,
 //                         video {
 //                             width: auto;
@@ -111,11 +204,11 @@
 //                             object-fit:contain;
 //                             object-position: center center;
 //                             border-radius: 1rem;
-    
+
 //                         }
 //                     }
 
-                    
+
 //                     h1 {
 //                         display: inline-flex;
 //                         // width: fit-content;
@@ -135,7 +228,7 @@
 //                         // width: 100%;
 //                         // grid-column: span 3;
 //                     }
-                    
+
 //                     h2 {
 //                         // order: 3;
 //                         width: fit-content;
@@ -144,7 +237,7 @@
 //                         // padding: 0.75rem;
 //                         // background: rgb(254, 214, 54);
 //                         // border-radius: 2rem;
-                        
+
 //                         // grid-column: span 1;
 
 //                         display: inline;
