--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -1,5 +1,5 @@
-
-.blog-page, .section-list{
+.blog-page,
+.section-list {
     overflow: hidden;
     padding: 0rem 0.5rem;
 
@@ -57,7 +57,7 @@
 
 
 //     .project-description{
-      
+
 //         p{
 //             font-size: 1.5rem;
 //         }
@@ -140,7 +140,7 @@
 
 .blog {
     grid-column: span 2;
-    
+
     h2 {
         background-color: rgb(68, 180, 68);
     }
@@ -158,14 +158,14 @@
             height: 40vh;
 
             // border-radius: 20rem;
-            
+
             .image-section {
-                
+
                 overflow: visible;
                 // overflow: hidden;
                 height: 100%;
                 width: 100%;
-                
+
                 iframe {
                     border-radius: 200rem;
 
@@ -212,7 +212,7 @@
     padding: 1rem;
     padding-top: 5rem;
 
-    .blogpostcover {
+    .postcover {
         width: 100%;
         // display: flex;
         display: grid;
@@ -223,63 +223,53 @@
         // border-style: solid;
 
         // grid-template-columns: repeat(12, 1fr);
-        padding-top: 0.5rem;
+        padding-top: 1rem;
         margin-bottom: 1rem;
 
         gap: 1rem;
 
-        // .preview-title {
-        h1 {
-            font-size: 5rem;
-            grid-column: span 8;
+        &:hover {
+            padding-left: 0rem;
+
         }
 
+        // .preview-title {
+        .project-description {
+            grid-column: span 8;
+            
+            h1 {
+                font-size: 5rem;
+            }
+        }
+        
+        
+        
         h2 {
             font-size: 1.5rem;
+            display: inline;
+            width: max-content;
         }
-
-
+        
+        
         .cover-image {
+            grid-column: span 2;
+
             img,
             video {
                 width: min-content;
-                height: 20vh;
+                height: 100%;
                 border-radius: 1rem;
             }
 
-            p.caption{
+            p.caption {
                 margin: 0.5rem;
                 line-height: 1.2rem;
                 font-weight: 300;
             }
         }
 
-        .project-description {
-            padding: 0rem 0.5rem;
-            display: flex;
-            flex-direction: column;
-
-            transition: all 0.5s ease;
-
-            font-family: Kleukens;
-            font-size: 1.5rem;
-            line-height: 1.8rem;
-            max-width: 70vw;
-
-            h1{
-                margin-bottom: 1rem;
-            }
-
-            p {
-                max-width: 60vw;
-            }
-
-        }
 
         .type {
-            // justify-self: flex-end;
-            // text-align: end;
-            // margin-left: auto;
             grid-column: span 1;
 
         }
@@ -290,40 +280,42 @@
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         // gap: 1rem;
-    
+
         .description {
             grid-column: 4/12;
             margin-bottom: 3.5rem;
+            font-size: 1.5rem;
+
             // width: 100%;
-    
+
         }
-    
+
         .image-section {
             width: 100%;
             display: flex;
             flex: 1 1 0;
-    
+
             gap: 1rem;
-    
+
             div {
                 flex-basis: 100%;
             }
-    
+
             .iFrame {
-    
+
                 iframe {
                     width: 100%;
                     height: 80vh;
                     border-radius: 2rem;
                     // zoom: 1.25;
                 }
-    
+
                 p.caption {
                     text-align: center;
                 }
             }
         }
-    
+
         .text-section {
             max-width: 100%;
             display: flex;
