--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -2,7 +2,7 @@
 
 .space {
     grid-column: span 2;
-    
+
     h2 {
         background-color: rgb(134, 134, 255);
     }
@@ -12,6 +12,11 @@
         width: 50vw;
         border-radius: 25vw;
         overflow: hidden;
+
+        video{
+            width: 100%;
+            height: 100%;
+        }
 
         
     }
