--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -22,129 +22,121 @@
     }
 }
 
-   
-//    .space {
-//         overflow: hidden;
-//         transition: all 0.5s ease;
+.space-post {
+    padding: 1rem;
+    padding-top: 5rem;
 
-//         .project-preview {
+    .postcover {
+        width: 100%;
+        // display: flex;
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
 
-//             .post-cover {
-//                 width: 100%;
-//                 // height: 100%;
-//                 // height: 40vh;
+        border-top: 1px;
+        border-color: aliceblue;
+        // border-style: solid;
 
-//                 display: flex;
-//                 align-items: flex-start;
+        // grid-template-columns: repeat(12, 1fr);
+        padding-top: 1rem;
+        margin-bottom: 1rem;
 
-//                 .cover-image {
-//                     position: relative;
-//                     // grid-column: 1/13;
-//                     height: 99%;
-//                     width: 100%;
-//                     // grid-column: 5/13;
-//                     border-radius: 25vw;
+        gap: 1rem;
 
-//                     padding: 0;
-//                     overflow: hidden;
+        &:hover {
+            padding-left: 0rem;
 
-//                     .image-section {
-//                         border-radius: 25vw;
-//                         width: 100%;
-//                         height: 100%;
+        }
 
-//                         iframe {
-//                             width: 100%;
-//                             height: 100%;
-//                             // border-radius: 0.5rem;
-//                         }
-//                     }
-//                 }
+        // .preview-title {
+        .project-description {
+            grid-column: span 8;
+            
+            h1 {
+                font-size: 5rem;
+            }
+        }
+        
+        
+        
+        h2 {
+            font-size: 1.5rem;
+            display: inline;
+            width: max-content;
+        }
+        
+        
+        .cover-image {
+            grid-column: span 2;
 
-//                 h2 {
-//                     background-color: rgb(134, 134, 255);
-//                 }
+            img,
+            video {
+                width: min-content;
+                height: 100%;
+                border-radius: 1rem;
+            }
 
-
-
-//                 h1 {
-//                     font-size: 1.8rem;
-//                     vertical-align: top;
-
-//                 }
-
-
-//                 .title-img {
-//                     // transform: scale(1.3);
-//                     width: 35%;
-//                     height: fit-content;
-//                     margin-top: 3rem;
-//                     overflow: visible;
-
-//                     img {
-//                         object-fit: contain;
-//                     }
-//                 }
-
-//                 .work-year {
-//                     display: none;
-//                 }
-//             }
-
-//         }
-
-        .deep-sea-bots {
-            .preview-title {
-                .cover-image {
-                    background-color: rgba(255, 255, 255, 0.5);
-                    overflow: hidden;
-
-                    .image-section {
-
-                        // overflow: visible;
-                        iframe {
-                            // overflow: visible;
-                            width: calc(100% * 4.4);
-                            height: calc(100% * 4);
-                            zoom: 0.5;
-
-                            -ms-zoom: 0.25;
-                            transform: scale(0.5) translateX(-2%);
-
-                            -moz-transform: scale(0.25);
-                            -moz-transform-origin: -2% 0;
-                            -o-transform: scale(0.25);
-                            -o-transform-origin: -2% 0;
-                            -webkit-transform: scale(0.25);
-                            -webkit-transform-origin: -2% 0;
-
-                        }
-                    }
-                }
+            p.caption {
+                margin: 0.5rem;
+                line-height: 1.2rem;
+                font-weight: 300;
             }
         }
 
 
+        .type {
+            grid-column: span 1;
 
-//         h1 {
-//             display: inline;
-//             font-family: "Helvetica";
-//             font-size: 3rem;
-//             line-height: 2.5rem;
-//         }
+        }
+    }
 
-//         // h2,
-//         // span {
-//         //     display: inline;
-//         //     // max-width: 8vw;
-//         //     // grid-column: span 1;
-//         //     font-family: Kleukens;
-//         //     font-size: 3rem;
-//         //     font-size: 0.8rem;
-//         //     vertical-align: top;
+    .blog-post-content {
+        // width:100vw;
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        gap: 1rem;
 
-//         // }
-//     }
+        .description {
+            grid-column: 4/11;
+            margin-bottom: 3.5rem;
+            font-size: 1.5rem;
+
+            // width: 100%;
+
+        }
+
+        .image-section {
+            width: 100%;
+            display: flex;
+            flex: 1 1 0;
+
+            gap: 1rem;
+
+            div {
+                flex-basis: 100%;
+            }
+
+            .iFrame {
+
+                iframe {
+                    width: 100%;
+                    height: 80vh;
+                    border-radius: 2rem;
+                    // zoom: 1.25;
+                }
+
+                p.caption {
+                    text-align: center;
+                }
+            }
+        }
+
+        .text-section {
+            max-width: 100%;
+            display: flex;
+            gap: 1rem;
+        }
+    }
+}
 
     // .space-post {
     //     width: 100vw;
