--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -53,29 +53,19 @@
 .swiper {
     height: 80vh;
     width: 100%;
-    // z-index: -1;
-    // .swiper-buttons{
-    //     position: absolute;
-    //     display: flex;
-    //     z-index: 2;
-    //     width: 100%;
-    //     height: 100%;
-
-    //     div{
-    //         width: 50%;
-    //         height: 100%;
-    //     }
-    // }
+    overflow: hidden;
+  
     .swiper-slide {
-        // width: auto;
-        width: 100%;
+        // width:fit-content;
+        width: auto;
         height: 100%;
 
         img,
         video {
-            width: min-content;
-            height: 100%;
-            border-radius: 1rem;
+            // width: min-content;
+            height: 80vh;
+            border-radius: 0rem;
+            display: inline;
         }
 
     }
@@ -88,11 +78,11 @@
 
 .swiper-buttons {
     position: absolute;
-    bottom: 0vh;
+    top: 0vh;
     display: inline-flex;
-    z-index: 1000;
+    z-index: 1;
     width: 100%;
-    height: 100%;
+    height: 80vh;
 }
 
 .swiper-button-prev,
