--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -1,24 +1,37 @@
 .work {
     // width: 50%;
     grid-column: span 1;
-    // height: 50vh;
+    // margin: -1rem -1rem;
+    height: 50vh;
+    overflow: hidden;
     // width: 50vw;
+    // background-color: black;
+
+    .project-preview {
+        // height: fit-content;
+        display: block;
+        overflow: hidden;
+        // min-height: 100%;
+        height: 50vh;
+
+    }
 
     .postcover {
-        // display: flex;
+        display: flex;
         // justify-content: space-between;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        // display: grid;
+        // grid-template-columns: 1fr 1fr 1fr;
+        border-radius: 0rem;
+        overflow: hidden;
 
-        width: 100%;
+        // width: 100%;
         height: 50vh;
-        width: 49vw;
+        width: 50vw;
 
 
         &:hover {
             padding-left: 0rem;
-            padding-top: 1rem;
-
+            padding-top: 0rem;
         }
     }
 
@@ -28,33 +41,41 @@
         border-color: white;
 
         // position: absolute;
-        margin: 0.2rem;
+        // margin: 0.2rem;
+        margin-top: 0.5rem;
         z-index: 1;
-        display: inline;
-        width: fit-content;
+        // display: inline-flex;
+        // width: fit-content;
 
     }
 
 
     .cover-image {
         height: 50vh;
-        width: 49vw;
+        width: 50vw;
+
         // z-index: 0;
 
 
         // height: 100%;
         // width: 100%;
-        border-radius: 1rem;
+        border-radius: 0rem;
         overflow: hidden;
         position: absolute;
-        object-fit: contain;
+        object-fit: cover;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         img,
         video {
-            object-fit: contain;
+            object-fit: cover;
+            // min-width: 100%;
+            // min-height: 100%;
             height: 100%;
-            width: 100%;
-            // border-radius: 1rem;
+            // width: 100%;
+            border-radius: 0rem;
         }
 
     }
@@ -62,22 +83,23 @@
     .project-description {
         z-index: 2;
         display: flex;
-        justify-content: center;
-        height: fit-content;
+        padding-left: 0.5rem;
+        // justify-content: center;
+        // height: fit-content;
+        // width: 30vw;
 
         h1 {
             // left: 12.5%;
-            width: fit-content;
 
             font-size: 3rem;
-            font-size: 1.5rem;
+            font-size: 1.75rem;
             line-height: 2.15rem;
 
-            margin-top: 0.25rem;
-            margin-left: -1rem;
+            margin-top: 0.4rem;
+            // margin-left: -1rem;
 
             border-radius: 5rem;
-            text-align: center;
+            // text-align: center;
             // line-height: 4.5rem;
 
             color: white;
@@ -94,34 +116,36 @@
             display: none;
         }
     }
+    .year{
+        margin-left: 0.5rem;
+    }
 
     .type {
         // position: relative;
-        margin-left: 0rem;
-        max-width: 10rem;
+        margin-right: 0.5rem;
+        // max-width: 40rem;
         // left: 25%;
         // text-align: end;
     }
 }
 
 .work-post {
-    padding: 1rem;
+    // padding: 1rem;
     // padding-top: 5rem;
 
     .postcover {
         width: 100%;
         // display: flex;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: repeat(12, 1fr);
 
-        border-top: 1px;
-        border-color: aliceblue;
+        // border-top: 1px;
+        // border-color: aliceblue;
         // border-style: solid;
 
         // grid-template-columns: repeat(12, 1fr);
-        padding-top: 1rem;
+        // padding-top: 1rem;
         margin-bottom: 1rem;
-
         gap: 1rem;
 
         &:hover {
@@ -131,29 +155,30 @@
 
         // .preview-title {
         .project-description {
-            grid-column: span 8;
-            
+            grid-column: 4/10;
+
             h1 {
                 font-size: 5rem;
             }
         }
-        
-        
-        
+
+
+
         h2 {
+            grid-column: span 2;
             font-size: 1.5rem;
             display: inline;
             width: max-content;
+            margin: 0rem 0.5rem;
         }
-        
-        
+
+
         .cover-image {
             // position: absolute;
             width: 100vw;
             height: 80vh;
             overflow: hidden;
-            // grid-column: span 2;
-
+            grid-column: span 12;
             // img,
             // video {
             //     width: min-content;
@@ -170,12 +195,17 @@
 
 
         .type {
-            grid-column: span 1;
+            grid-column: 11/13;
+        }
 
+        .collaborators {
+            grid-column: 4/10;
         }
     }
 
     .work-post-content {
+        padding: 1rem;
+
         // width:100vw;
         display: grid;
         grid-template-columns: repeat(12, 1fr);
@@ -223,352 +253,3 @@
         }
     }
 }
-// .work-page,
-// .work-section {
-//     overflow: hidden;
-
-//     .project-list {
-//         width: 100%;
-//         overflow: hidden;
-//         // padding: 0rem 0.5rem;
-//         // margin-top: 1rem;
-
-//         display: grid;
-//         grid-template-columns: repeat(1, minmax(0, 1fr));
-//         gap: 0.5rem;
-
-//         a {
-//             height: max-content;
-//         }
-
-//         // .full-width {
-//         //     grid-column: span 1;
-
-//         //     // display: grid;
-//         //     // grid-template-columns: repeat(3, minmax(0, 1fr));
-//         //     // gap: 0.5rem;
-//         //     .project-preview {
-//         //         .cover-image {
-//         //             // grid-column: span 2;
-//         //             // order: 2;
-//         //             height: 100%;
-
-//         //             .image-section,
-//         //             .video-section,
-//         //             .gatsby-image-wrapper {
-//         //                 object-fit: cover;
-//         //                 object-position: center center;
-//         //                 width: 100%;
-//         //                 // max-height: 100%;
-//         //                 height: 70vh;
-
-//         //             }
-
-//         //             img,
-//         //             video {
-//         //                 width: 100%;
-//         //                 height: 100%;
-//         //             }
-//         //         }
-//         //     }
-
-
-//         //     // .cover-title {
-//         //     //     height:max-content;
-//         //     //     grid-column: span 1;
-//         //     //     order: 1;
-//         //     // }
-
-//         // }
-
-//         div {
-//             .project-preview {
-//                 width: 100%;
-//                 // grid-column: span 2;
-//                 // display: flex;
-//                 // justify-content: center;
-//                 // align-items: end;
-//                 // height: max-content;
-
-
-//                 .preview-title {
-//                     // opacity: 0;
-//                     // transform: scale(1);
-//                     transition: all 0.5s ease;
-//                     height: fit-content;
-
-//                     // box-sizing: border-box;
-//                     // position: absolute;
-//                     // z-index: 10;
-//                     // max-width: 30vw;
-//                     // margin-bottom: 2rem;
-
-//                     // justify-content: space-between;
-//                     display: flex;
-//                     gap: 0.5rem;
-//                     // flex-wrap: wrap;
-//                     // grid-template-columns: 1fr 1fr 1fr 1fr;
-//                     // margin: 0.5rem;
-
-//                     .cover-image {
-//                         // width: min-content;
-//                         // order: 2;
-//                         transition: all 0.25s ease;
-//                         margin-bottom: 0.5rem;
-//                         // width: 100%;
-//                         margin: 0rem;
-//                         padding: 0rem;
-
-//                         .image-section,
-//                         .video-section,
-//                         .gatsby-image-wrapper {
-//                             object-fit: contain;
-//                             object-position: center center;
-//                             width: 100%;
-//                             height: 100%;
-
-//                         }
-
-//                         img,
-//                         video {
-//                             width: auto;
-//                             height: 6vh;
-//                             object-fit:contain;
-//                             object-position: center center;
-//                             border-radius: 1rem;
-
-//                         }
-//                     }
-
-
-//                     h1 {
-//                         display: inline-flex;
-//                         // width: fit-content;
-//                         height: fit-content;
-
-//                         // padding: 0.75rem;
-//                         // background: rgb(254, 214, 54);
-//                         // border-radius: 2rem;
-
-//                         // grid-column: span 4;
-//                         font-size: 3.25rem;
-//                         font-weight: 90;
-//                         line-height: 2.75rem;
-//                         font-family: "Kleukens";
-//                         display: block;
-//                         // order: 3;
-//                         // width: 100%;
-//                         // grid-column: span 3;
-//                     }
-
-//                     h2 {
-//                         // order: 3;
-//                         width: fit-content;
-//                         height: fit-content;
-
-//                         // padding: 0.75rem;
-//                         // background: rgb(254, 214, 54);
-//                         // border-radius: 2rem;
-
-//                         // grid-column: span 1;
-
-//                         display: inline;
-//                         vertical-align: top;
-//                         font-size: 1.5rem;
-//                         font-family: Kleukens;
-//                         // width: 50%;
-
-//                         // margin: 0rem 0.5rem;
-//                         // vertical-align: top;
-//                     }
-
-//                     // .type {
-//                     //     grid-column: 2/5;
-//                     //     text-align: end;
-
-//                     // }
-
-//                     // .collaborators {
-//                     //     // grid-column: span 2;
-//                     //     display: inline;
-//                     //     grid-column: 2/5;
-
-//                     // }
-
-//                     .work-year,
-//                     .blog-type {
-//                         display: none;
-//                     }
-//                 }
-
-//             }
-
-//             .project-preview:hover {
-//                 .cover-title {
-//                     transform: scale(1);
-//                 }
-//             }
-//         }
-
-//     }
-
-// }
-
-// // .hero.work-section{
-// //     // display: grid;
-// //     // grid-template-columns: 1fr 1fr;
-
-// //     .project-list{
-// //         .div{
-// //             grid-column: span 1;
-
-// //         }
-// //         .full-width {
-// //             grid-column: span 1;
-// //         }
-// //     }
-// // }
-
-// .work-page {
-//     min-height: 100vh;
-//     width: 100vw;
-
-// }
-
-
-// .workpostcover {
-//     display: grid;
-//     grid-template-columns: repeat(12, 1fr);
-//     margin-bottom: 5.5rem;
-
-//     .cover-title {
-//         position: absolute;
-//         bottom: 1rem;
-//         z-index: 1;
-
-//         padding: 1rem;
-//         grid-column: 1/13;
-//         gap: 1rem;
-
-//         display: grid;
-//         grid-template-columns: repeat(12, 1fr);
-
-//     }
-
-//     .headline {
-//         grid-column: span 4;
-
-//     }
-
-//     h1 {
-//         display: inline;
-//         font-family: Kleukens;
-
-//         font-size: 3rem;
-//         line-height: 3rem;
-//         // background-color: rgb(254, 214, 54);
-//         color: black;
-//     }
-
-//     h2 {
-//         display: inline;
-//         grid-column: span 3;
-//         font-family: Kleukens;
-//         font-size: 1.8rem;
-//         // background-color: rgb(254, 214, 54);
-//         color: black;
-//     }
-
-
-//     .collaborators {
-//         grid-column: span 3;
-//     }
-
-//     // .subhead {
-//     //     grid-column: 1/13;
-//     //     display: flex;
-//     //     justify-content: space-between;
-//     //     margin-bottom: 1rem;
-
-//     //     h2 {
-//     //         // width: 16vw;
-//     //         font-family: Kleukens;
-//     //         font-size: 1.8rem;
-//     //     }
-//     // }
-
-//     .cover-image {
-//         grid-column: 1/13;
-//         height: 100vh;
-
-//         // overflow: hidden;
-//         div {
-//             // width: 100%;
-//             // height: 100%;
-//         }
-//     }
-
-//     .fullwidth-image {
-//         // grid-column: 3/10;
-
-//         overflow: hidden;
-//         width: 100vw;
-//         height: 80vh;
-
-//         div {
-//             width: 100%;
-//             height: 100%;
-
-//             display: flex;
-//             align-items: center;
-//             overflow: hidden;
-
-//             img,
-//             video {
-//                 object-fit: contain;
-//             }
-
-//         }
-//     }
-// }
-
-// .work-post-content {
-//     padding: 1rem;
-//     display: grid;
-//     grid-template-columns: repeat(12, 1fr);
-//     gap: 1rem;
-
-//     .description {
-//         grid-column: span 9;
-//         margin-bottom: 3.5rem;
-
-//         p {
-//             font-size: 2rem;
-//             line-height: 2.2rem;
-//         }
-//     }
-
-//     .image-section {
-//         width: 100%;
-//         display: flex;
-//         flex: 1 1 0;
-
-//         gap: 1rem;
-
-//         div {
-//             flex-basis: 100%;
-//         }
-//     }
-
-//     .text-section {
-//         max-width: 100%;
-//         display: flex;
-//         gap: 1rem;
-//     }
-// }
-
-// p.caption {
-//     margin-top: 0.2rem;
-//     font-family: Kleukens;
-//     font-size: 0.8rem;
-// }
