--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -125,6 +125,7 @@
 .blog {
     grid-column: span 2;
     padding: 0rem 0.5rem;
+    margin-top: 0.5rem;
 
     h2 {
         background-color: rgb(68, 180, 68);
