--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 .index-page {
     // width: 100vw;
-    padding-top: 6rem;
+    // padding-top: 6rem; 
 
     .section-list {
         // padding: 2rem 0rem;
