--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -64,6 +64,7 @@
         video {
             // width: min-content;
             height: 80vh;
+            // height: 100%;
             border-radius: 0rem;
             display: inline;
         }
