--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -130,6 +130,106 @@
     h2 {
         background-color: rgb(68, 180, 68);
     }
+
+    .postcover {
+        grid-column: span 2;
+    
+        width: auto;
+        display: flex;
+        
+        transition: all 0.3s ease;
+    
+        &:hover{
+            // border-left: 1px solid black;
+            padding-left: 1rem;
+    
+        }
+    
+        gap: 1rem;
+        margin-bottom: 1rem;
+    
+        h1 {
+            font-size: 5rem;
+            line-height: 4.5rem;
+            margin-bottom: 1rem;
+            // margin-top: 0px;
+    
+        }
+    
+        h2 {
+            font-size: 1.5rem;
+            font-family: Kleukens;
+            height: fit-content;
+            border-radius: 5rem;
+            text-align: left;
+            
+            padding: 0.2rem 0.5rem;
+            border-style: solid;
+            border-width: 1px;
+            border-color: black;
+        }
+    
+        .cover-image {
+            
+            img,
+            video {
+                width: min-content;
+                height: 20vh;
+                border-radius: 1rem;
+            }
+    
+            iframe{
+                height: 100%;
+                width: 100%;
+            }
+    
+        }
+    
+        .title-img {
+            // transform: scale(0.5);
+            height: fit-content;
+            // margin-top: 3rem;
+            overflow: visible;
+            
+            img {
+                // height: 20vh;
+                object-fit: contain;
+            }
+        }
+    
+        .project-description {
+            // padding: 0rem 0.5rem;
+            // display: flex;
+            // flex-direction: column;
+    
+            transition: all 0.5s ease;
+    
+            font-family: Kleukens;
+            max-width: 70vw;
+    
+            // h1{
+            //     margin-bottom: 1rem;
+            // }
+    
+            p {
+                max-width: 50vw;
+                font-size: 1.25rem;
+                line-height: 1.5rem;
+                opacity: 0.9;
+                // display: none;
+    
+            }
+    
+        }
+    
+        .type {
+            justify-self: flex-end;
+            text-align:center;
+            margin-left: auto;
+    
+        }
+    }
+    
 }
 
 
@@ -161,21 +261,33 @@
         // .preview-title {
         .project-description {
             grid-column: span 8;
-            
+            font-family: Kleukens;
+
             h1 {
                 font-size: 5rem;
+
             }
         }
-        
-        
-        
+
+
+
         h2 {
-            font-size: 1.5rem;
             display: inline;
             width: max-content;
+
+            font-size: 1.5rem;
+            font-family: Kleukens;
+            height: fit-content;
+            border-radius: 5rem;
+            text-align: left;
+            
+            padding: 0.2rem 0.5rem;
+            border-style: solid;
+            border-width: 1px;
+            border-color: black;
         }
-        
-        
+
+
         .cover-image {
             grid-column: span 2;
 
