--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -2,7 +2,7 @@
     // width: 50%;
     grid-column: span 1;
     // margin: -1rem -1rem;
-    height: 55vh;
+    height: 50vh;
     overflow: hidden;
     // width: 50vw;
     // background-color: black;
@@ -12,20 +12,21 @@
         display: block;
         overflow: hidden;
         // min-height: 100%;
-        height: 55vh;
+        height: 50vh;
 
     }
 
+
     .postcover {
         display: flex;
-        // justify-content: space-between;
+        justify-content: space-between;
         // display: grid;
         // grid-template-columns: 1fr 1fr 1fr;
         border-radius: 0rem;
         overflow: hidden;
 
         // width: 100%;
-        height: 55vh;
+        height: 50vh;
         width: 50vw;
 
 
@@ -33,32 +34,37 @@
             padding-left: 0rem;
             padding-top: 0rem;
         }
-    }
 
-    h2 {
-        // background-color: rgb(254, 214, 54);
-        color: white;
-        border-color: white;
+        h2 {
+            // background-color: rgb(254, 214, 54);
+            height: fit-content;
+            border-radius: 5rem;
+            text-align: left;
+            
+            padding: 0.2rem 0.5rem;
+            font-size: 1.5rem;
+            font-family: Kleukens;
 
-        // position: absolute;
-        // margin: 0.2rem;
-        margin-top: 0.5rem;
-        z-index: 1;
-        // display: inline-flex;
-        // width: fit-content;
+            color: white;
+            border-color: white;
+            border-style: solid;
+            border-width: 1px;
 
+            // position: absolute;
+            // margin: 0.2rem;
+            margin-top: 0.5rem;
+            z-index: 1;
+            // display: inline-flex;
+            // width: fit-content;
+
+        }
     }
 
 
     .cover-image {
-        height: 55vh;
+        height: 50vh;
         width: 50vw;
 
-        // z-index: 0;
-
-
-        // height: 100%;
-        // width: 100%;
         border-radius: 0rem;
         overflow: hidden;
         position: absolute;
@@ -90,6 +96,7 @@
 
         h1 {
             // left: 12.5%;
+            font-family: Kleukens;
 
             font-size: 3rem;
             font-size: 1.75rem;
@@ -116,13 +123,15 @@
             display: none;
         }
     }
-    .year{
+
+    .year {
         margin-left: 0.5rem;
     }
 
     .type {
         // position: relative;
-        margin-right: auto;
+        margin-right: 0.5rem;
+        margin-left: auto;
         // max-width: 40rem;
         // left: 25%;
         // text-align: end;
@@ -138,6 +147,7 @@
         // display: flex;
         display: grid;
         grid-template-columns: repeat(12, 1fr);
+        padding: 1rem;
 
         // border-top: 1px;
         // border-color: aliceblue;
@@ -149,8 +159,7 @@
         gap: 1rem;
 
         &:hover {
-            padding-left: 0rem;
-
+            padding: 1rem;
         }
 
         // .preview-title {
@@ -159,6 +168,8 @@
 
             h1 {
                 font-size: 5rem;
+                font-family: Kleukens;
+
             }
         }
 
@@ -166,10 +177,24 @@
 
         h2 {
             grid-column: span 2;
-            font-size: 1.5rem;
             display: inline;
+
             width: max-content;
+            height: fit-content;
+
             margin: 0rem 0.5rem;
+            padding: 0.2rem 0.5rem;
+
+            border-radius: 5rem;
+            
+            font-size: 1.5rem;
+            font-family: Kleukens;
+            text-align: left;
+
+            // color: white;
+            // border-color: white;
+            border-style: solid;
+            border-width: 1px;
         }
 
 
@@ -179,27 +204,32 @@
             height: 80vh;
             overflow: hidden;
             grid-column: span 12;
-            // img,
-            // video {
-            //     width: min-content;
-            //     height: 100%;
-            //     border-radius: 1rem;
-            // }
+            margin: -1rem;
+            margin-bottom: 0rem;
 
-            // p.caption {
-            //     margin: 0.5rem;
-            //     line-height: 1.2rem;
-            //     font-weight: 300;
-            // }
+            img,
+            video {
+                // width: min-content;
+                height: 80vh;
+                // border-radius: 1rem;
+            }
+
+            p.caption {
+                margin: 0.5rem;
+                line-height: 1.2rem;
+                font-weight: 300;
+            }
         }
 
 
         .type {
             grid-column: 11/13;
+            margin-left: auto;
         }
 
         .collaborators {
             grid-column: 4/10;
+            
         }
     }
 
