--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -36,17 +36,18 @@
         color: grey;
     }
 
-    .image-section {
-        height: 100%;
+    // .image-section {
+    //     height: 100%;
 
-        .video-section {
+        // .video-section {
             video {
+                // height: 80vh;
                 width: 100%;
             }
 
             // width: 30vw;
-        }
-    }
+        // }
+    // }
 
 }
 
