--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -44,6 +44,10 @@
                 // height: 80vh;
                 width: 100%;
             }
+            img {
+                // height: 80vh;
+                width: 100%;
+            }
 
             // width: 30vw;
         // }
