--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -1,4 +1,4 @@
-.html-content {
+.image-section {
     // margin-bottom: 3.5rem;
     height: 100%;
     margin-bottom: 4.5rem;
@@ -6,6 +6,14 @@
     font-family: Kleukens;
     word-wrap: break-word;
 
+    display: flex;
+    flex: 1 1 0;
+
+    gap: 1rem;
+
+    div {
+        flex-basis: 100%;
+    }
 
     h2 {
         margin-bottom: 1.5rem;
@@ -25,6 +33,15 @@
         margin-bottom: 1rem;
     }
 
+    p.caption {
+        font-size: 1rem;
+        line-height: 1.2rem;
+        font-weight: 300;
+        margin: 0.5rem;
+        margin-top: 0.2rem;
+        font-family: Kleukens;
+    }
+
     //  p {
     //     font-size: 2rem;
     //     line-height: 2.5rem;
@@ -39,18 +56,19 @@
     // .image-section {
     //     height: 100%;
 
-        // .video-section {
-            video {
-                // height: 80vh;
-                width: 100%;
-            }
-            img {
-                // height: 80vh;
-                width: 100%;
-            }
+    // .video-section {
+    video {
+        // height: 80vh;
+        width: 100%;
+    }
 
-            // width: 30vw;
-        // }
+    img {
+        // height: 80vh;
+        width: 100%;
+    }
+
+    // width: 30vw;
+    // }
     // }
 
 }
@@ -59,7 +77,7 @@
     height: 80vh;
     width: 100%;
     overflow: hidden;
-  
+
     .swiper-slide {
         // width:fit-content;
         width: auto;
