--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -133,103 +133,103 @@
 
     .postcover {
         grid-column: span 2;
-    
+
         width: auto;
         display: flex;
-        
+
         transition: all 0.3s ease;
-    
-        &:hover{
+
+        &:hover {
             // border-left: 1px solid black;
             padding-left: 1rem;
-    
+
         }
-    
+
         gap: 1rem;
         margin-bottom: 1rem;
-    
+
         h1 {
             font-size: 5rem;
             line-height: 4.5rem;
             margin-bottom: 1rem;
             // margin-top: 0px;
-    
+
         }
-    
+
         h2 {
             font-size: 1.5rem;
             font-family: Kleukens;
             height: fit-content;
             border-radius: 5rem;
             text-align: left;
-            
+
             padding: 0.2rem 0.5rem;
             border-style: solid;
             border-width: 1px;
             border-color: black;
         }
-    
+
         .cover-image {
-            
+
             img,
             video {
                 width: min-content;
                 height: 20vh;
                 border-radius: 1rem;
             }
-    
-            iframe{
+
+            iframe {
                 height: 100%;
                 width: 100%;
             }
-    
+
         }
-    
+
         .title-img {
             // transform: scale(0.5);
             height: fit-content;
             // margin-top: 3rem;
             overflow: visible;
-            
+
             img {
                 // height: 20vh;
                 object-fit: contain;
             }
         }
-    
+
         .project-description {
             // padding: 0rem 0.5rem;
             // display: flex;
             // flex-direction: column;
-    
+
             transition: all 0.5s ease;
-    
+
             font-family: Kleukens;
             max-width: 70vw;
-    
+
             // h1{
             //     margin-bottom: 1rem;
             // }
-    
+
             p {
                 max-width: 50vw;
                 font-size: 1.25rem;
                 line-height: 1.5rem;
                 opacity: 0.9;
                 // display: none;
-    
+
             }
-    
+
         }
-    
+
         .type {
             justify-self: flex-end;
-            text-align:center;
+            text-align: center;
             margin-left: auto;
-    
+
         }
     }
-    
+
 }
 
 
@@ -280,7 +280,7 @@
             height: fit-content;
             border-radius: 5rem;
             text-align: left;
-            
+
             padding: 0.2rem 0.5rem;
             border-style: solid;
             border-width: 1px;
@@ -299,9 +299,12 @@
             }
 
             p.caption {
-                margin: 0.5rem;
+                font-size: 1rem;
                 line-height: 1.2rem;
                 font-weight: 300;
+                margin: 0.5rem;
+                margin-top: 0.2rem;
+                font-family: Kleukens;
             }
         }
 
