--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -330,36 +330,36 @@
 
         }
 
-        .image-section {
-            width: 100%;
-            display: flex;
-            flex: 1 1 0;
+        // .image-section {
+        //     width: 100%;
+        //     display: flex;
+        //     flex: 1 1 0;
 
-            gap: 1rem;
+        //     gap: 1rem;
 
-            div {
-                flex-basis: 100%;
-            }
+        //     div {
+        //         flex-basis: 100%;
+        //     }
 
-            .iFrame {
+        //     .iFrame {
 
-                iframe {
-                    width: 100%;
-                    height: 80vh;
-                    border-radius: 2rem;
-                    // zoom: 1.25;
-                }
+        //         iframe {
+        //             width: 100%;
+        //             height: 80vh;
+        //             border-radius: 2rem;
+        //             // zoom: 1.25;
+        //         }
 
-                p.caption {
-                    text-align: center;
-                }
-            }
-        }
+        //         p.caption {
+        //             text-align: center;
+        //         }
+        //     }
+        // }
 
-        .text-section {
-            max-width: 100%;
-            display: flex;
-            gap: 1rem;
-        }
+        // .text-section {
+        //     max-width: 100%;
+        //     display: flex;
+        //     gap: 1rem;
+        // }
     }
 }
