--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@
         // padding: 2rem 0rem;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 0rem;
+        // gap: 2rem 0rem;
 
         .post-link {
             // grid-column: span 1;
