--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -234,53 +234,69 @@
            }
        }
 
-       .space-post-content {
-           // width:100vw;
-           display: grid;
-           grid-template-columns: repeat(12, 1fr);
-           gap: 1rem;
+    .space-post-content {
+        // width:100vw;
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        gap: 1rem;
 
-           .description {
-               grid-column: 4/11;
-               margin-bottom: 3.5rem;
-               font-size: 1.5rem;
+        .description {
+            grid-column: 4/11;
+            margin-bottom: 3.5rem;
+            font-size: 1.5rem;
 
-               // width: 100%;
+            // width: 100%;
 
-           }
+        }
+    }
 
-           .image-section {
-               width: 100%;
-               display: flex;
-               flex: 1 1 0;
+    //    .space-post-content {
+    //        // width:100vw;
+    //        display: grid;
+    //        grid-template-columns: repeat(12, 1fr);
+    //        gap: 1rem;
 
-               gap: 1rem;
+    //        .description {
+    //            grid-column: 4/11;
+    //            margin-bottom: 3.5rem;
+    //            font-size: 1.5rem;
 
-               div {
-                   flex-basis: 100%;
-               }
+    //            // width: 100%;
 
-               .iFrame {
+    //        }
 
-                   iframe {
-                       width: 100%;
-                       height: 80vh;
-                       border-radius: 2rem;
-                       // zoom: 1.25;
-                   }
+    //        .image-section {
+    //            width: 100%;
+    //            display: flex;
+    //            flex: 1 1 0;
 
-                   p.caption {
-                       text-align: center;
-                   }
-               }
-           }
+    //            gap: 1rem;
 
-           .text-section {
-               max-width: 100%;
-               display: flex;
-               gap: 1rem;
-           }
-       }
+    //            div {
+    //                flex-basis: 100%;
+    //            }
+
+    //            .iFrame {
+
+    //                iframe {
+    //                    width: 100%;
+    //                    height: 80vh;
+    //                    border-radius: 2rem;
+    //                    // zoom: 1.25;
+    //                }
+
+    //                p.caption {
+    //                    text-align: center;
+    //                }
+    //            }
+    //        }
+
+    //        .text-section {
+    //            max-width: 100%;
+    //            display: flex;
+    //            gap: 1rem;
+    //        }
+    //    }
    }
 
    .deep-sea-bots {
